--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,4 +13,7 @@ $icon-font-path: '../fonts/';
 @import "_etaps";
 @import "_connection";
 @import "_footer";
+@import "_contacts";
+@import "_not-found";
+@import "_blog";
 
