--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,16 +1,18 @@
 .header{
 	&__top-nav{
-
+		box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.11);
 	}
 	&__logo{
-		max-width: 60%;
+		max-width: 100%;
 		padding: 20px;
 		@media screen and (max-width: 1200px){
 			max-width: 90%;
-			padding-top: 10px;
+			padding-top: 20px;
 		}
 		@media (max-width: $screen-md-max){
 			margin: 0 auto;
+			padding: 10px;
+			padding-top: 25px;
 		}
 		@media (max-width: $screen-sm-max){
 			max-width: 50%;		
@@ -29,92 +31,80 @@
 		}
 	}
 	&__menu-nav{
+		min-height: 110px;
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: flex-end;
+		@media screen and (max-width: 1200px){
+			align-items: center;
+		}
+		@media (max-width: $screen-sm-max){
+			display: none;
+		}
 		ul {
-  display: block;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  &:after {
-    display: block;
-    content: ' ';
-    clear: both;
-    float: none;
-  }
-  &.menu > li {
-    float: left;
-    position: relative;
-    > a {
-      display: block;
-      padding: 10px;
-      color: white;
-      background-color: red;
-      text-decoration: none;
-      &:hover {
-        background-color: black;
-      }
-    }
-  }
-  &.submenu {
-    display: none;
-    position: absolute;
-    width: 120px;
-    top: 37px;
-    left: 0;
-    background-color: white;
-    border: 1px solid red;
-    > li {
-      display: block;
-      > a {
-        display: block;
-        padding: 10px;
-        color: white;
-        background-color: red;
-        text-decoration: none;
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-}
-		// min-height: 110px;
-		// display: -webkit-flex;
-		// display: -moz-flex;
-		// display: -ms-flex;
-		// display: -o-flex;
-		// display: flex;
-		// justify-content: center;
-		// flex-direction: column;
-		// align-items: center;
-		// @media (max-width: $screen-sm-max){
-		// 	display: none;
-		// }
-		// ul{
-		// 	margin: 0;
-		// 	padding: 0;
-			
-		// 	li{
-		// 		list-style-type: none;
-		// 		display: inline-block;
-		// 		margin-left: 45px;
-		// 		font-weight: 500;
-		// 		@media (max-width: $screen-md-max){
-		// 			margin-left: 15px;					
-		// 		}
-		// 		&:first-child{
-		// 			margin-left: 0;
-		// 		}
-		// 		a{
-		// 			text-decoration: none;
-		// 			color: #5c5c5c;
-		// 			font-size: 20px;
-		// 			transition: all .5s;
-		// 			&:hover{
-		// 				color: #092033;
-		// 			}
-		// 		}
-		// 	}
-		// }
+			display: block;
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			&:after {
+				display: block;
+				content: ' ';
+				clear: both;
+				float: none;
+			}
+			&.menu > li {
+				float: left;
+				position: relative;
+				margin-right: 50px;
+				@media screen and (max-width: 1200px){
+					margin-right: 30px;					
+				}
+				> a {
+					display: block;
+					padding: 10px;
+					color: #5c5c5c;
+					font-size: 20px;
+					text-decoration: none;
+					transition: all .3s;
+					&:hover {
+						color: #092033;
+					}
+				}
+			}
+			&.submenu {
+				display: none;
+				position: absolute;
+				width: 120px;
+				top: 37px;
+				left: 0;
+				background-color: white;
+				border: 1px solid rgba(9,32,51, 0.75);;
+				z-index: 9999999;
+				li {
+					display: block;
+					a {
+						display: block;
+						padding: 10px;
+						color: white;
+						background-color: rgba(9,32,51, 0.75);
+						text-decoration: none;
+						transition: all .3s;
+						&:hover {
+							text-decoration: none;
+							color: #092033;							
+						}
+					}
+				}
+			}
+		}
+		ul.menu > li:hover > ul.submenu {
+			display: block;			
+		}
 	}
 	&__phone{
 		min-height: 110px;
@@ -144,9 +134,13 @@
 			font-size: 20px;
 			text-decoration: none;
 			color: #000;
+			font-weight: 600;
 			i{
 				padding-right: 15px;
 				color: #000;
+			}
+			@media screen and (max-width: 1200px){
+				font-size: 16px;
 			}
 		}
 	}
