--- a/app/styles/_not-found.scss
+++ b/app/styles/_not-found.scss
@@ -92,6 +92,7 @@
 			min-height: 48px;
 			max-width: 295px;
 			font-size: 20px;
+			margin: 0 auto;
 			margin-top: 40px;
 			text-transform: uppercase;
 			@media (max-width: $screen-xs-max){
