--- a/app/styles/_blog.scss
+++ b/app/styles/_blog.scss
@@ -1,5 +1,8 @@
 .blog{
-
+	padding-top: 35px;
+	@media (max-width: $screen-xs-max){
+		padding-top: 30px;
+	}
 	.tab {	
 		position: relative;
 		overflow: hidden;
