--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -2,21 +2,21 @@
 	background-color: rgb(9, 32, 51);
 	padding-bottom: 7px;
 	&__logo{
-		max-width: 100%;
-		padding: 20px;
-		@media screen and (max-width: 1200px){
-			max-width: 90%;
-			padding-top: 10px;
-		}
-		@media (max-width: $screen-md-max){
+		min-height: 90px;
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: flex-end;
+		a{
+			display: block;
+			max-width: 100px;
+			width: 100%;	
+			min-height: 60px;
 			margin: 0 auto;
-		}
-		@media (max-width: $screen-sm-max){
-			max-width: 25%;		
-			padding-top: 20px;
-		}
-			@media (max-width: $screen-xs-min){
-			max-width: 45%;		
 		}
 		img{
 			width: 100%;
@@ -24,7 +24,7 @@
 		}
 	}
 	&__menu-nav{
-		padding-top: 45px;
+		padding-top: 35px;
 		@media screen and (max-width: 1200px){
 			padding-top: 35px;			
 		}
@@ -67,7 +67,7 @@
 		}
 	}
 	&__contacts-block{
-		padding-top: 45px;
+		padding-top: 35px;
 		@media screen and (max-width: 1200px){
 			padding-top: 35px;			
 		}
