--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -3,35 +3,31 @@
 		box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.11);
 	}
 	&__logo{
-		max-width: 100%;
-		padding: 20px;
-		@media screen and (max-width: 1200px){
-			max-width: 90%;
-			padding-top: 20px;
-		}
-		@media (max-width: $screen-md-max){
-			margin: 0 auto;
-			padding: 10px;
-			padding-top: 25px;
-		}
-		@media (max-width: $screen-sm-max){
-			max-width: 50%;		
-			padding-top: 20px;
-			margin: 0;
-			display: inline-block;
-		}
-		@media (max-width: $screen-xs-max){
-			max-width: 40%;		
+		min-height: 90px;
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: flex-end;
+		a{
 			display: block;
+			max-width: 110px;
+			width: 100%;	
+			min-height: 60px;
 			margin: 0 auto;
 		}
+
+
 		img{
 			width: 100%;
 			max-width: 100%;
 		}
 	}
 	&__menu-nav{
-		min-height: 110px;
+		min-height: 90px;
 		display: -webkit-flex;
 		display: -moz-flex;
 		display: -ms-flex;
@@ -72,14 +68,14 @@
 					text-decoration: none;
 					transition: all .3s;
 					&:hover {
-						color: #092033;
+						color: #ffca1c;
 					}
 				}
 			}
 			&.submenu {
 				display: none;
 				position: absolute;
-				width: 120px;
+				width: 100%;
 				top: 37px;
 				left: 0;
 				background-color: white;
@@ -87,7 +83,9 @@
 				z-index: 9999999;
 				li {
 					display: block;
+					width: 100%;
 					a {
+						width: 100%;
 						display: block;
 						padding: 10px;
 						color: white;
@@ -107,7 +105,7 @@
 		}
 	}
 	&__phone{
-		min-height: 110px;
+		min-height: 90px;
 		display: -webkit-flex;
 		display: -moz-flex;
 		display: -ms-flex;
@@ -117,7 +115,7 @@
 		flex-direction: column;
 		align-items: center;
 		@media (max-width: $screen-sm-max){
-			min-height: 120px;
+			min-height: 90px;
 			display: -webkit-flex;
 			display: -moz-flex;
 			display: -ms-flex;
@@ -145,6 +143,7 @@
 		}
 	}
 	&__slider{
+
 		.item{
 			min-height: 530px;
 			background-size: cover;
@@ -158,6 +157,7 @@
 			flex-direction: row;
 			justify-content: center;
 			align-items: center;
+			position: relative;
 			&:before{
 				position: absolute;
 				content: '';
@@ -245,6 +245,258 @@
 				}
 			}
 		}
+
+
+		.firstslide{
+			position: relative;
+			background-position: 680px;
+			background-size: 72%;
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: -o-flex;
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			@media screen and (max-width: 1200px){
+				background-size: cover;
+				background-position: center;
+			}
+			@media (max-width: $screen-xs-max){
+				padding-top: 50px;
+			}
+			.header__img-wrap{
+				padding-top: 0;
+				margin-top: -40px;
+				@media (max-width: $screen-md-max){
+					padding-top: 0;
+					max-width: 300px;
+					margin: 0 auto;
+				}
+			}
+			&:before{
+				background-color: rgba(4,22,46,0.80);
+				position: absolute;
+				content: '';
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+			}
+			ul{
+				@media screen and (max-width: 1199px){
+					padding-top: 100px;					
+				}
+				@media (max-width: $screen-md-max){
+					padding-top: 125px;
+					padding-left: 70px;
+				}
+				@media (max-width: $screen-sm-max){
+					padding-left: 70px;
+				}
+				@media (max-width: $screen-xs-max){
+					padding: 0;
+				}
+				li{
+					@media (max-width: $screen-xs-max){
+						padding-bottom: 10px;
+					}
+					&:nth-child(1){
+						margin-left: -100px;
+						margin-top: 0;
+						@media screen and (max-width: 1200px){
+							margin-left: -100px;							
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+						}
+					}
+					&:nth-child(2){
+						margin-left: -40px;
+						margin-top: 35px;
+						@media screen and (max-width: 1200px){
+							margin-left: -30px;
+							margin-top: 65px;
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+						}
+					}
+					&:nth-child(3){
+						margin-left: -100px;
+						margin-top: 55px;
+						@media screen and (max-width: 1200px){
+							margin-left: -100px;		
+							margin-top: 70px;					
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+						}
+					}
+					&:last-child{
+						margin-left: -40px;
+						margin-top: 45px;
+						padding-bottom: 0;
+						@media screen and (max-width: 1200px){
+							margin-left: -30px;		
+							margin-top: 65px;					
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+						}
+					}
+				}
+			}
+			.header__separate{
+				min-height: 350px;
+			}
+		}
+		.thirdslide{
+			padding-top: 20px;	
+			background-position: 0 -510px;
+			&:before{
+				background-color: rgba(0,0,0,0.60);
+				position: absolute;
+				content: '';
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+			}
+			@media (max-width: $screen-md-max){
+				background-position:  center;
+				padding: 0;
+			}
+			@media (max-width: $screen-xs-max){
+				background-size: cover;
+				min-height: 560px;
+			}
+			.header__img-wrap{
+				padding-top: 0;
+			}
+			a{
+				display: block;
+				border: 1px solid #e6b81f;
+				max-width: 215px;
+				min-height: 45px;
+				text-align: center;
+				text-decoration: none;
+				line-height: 45px;
+				font-size: 25px;
+				color: #e6b81f;
+				transition: all .5s;
+				margin-top: 60px;
+				&:hover{
+					background-color: #e6b81f;
+					color: #fff;
+				}
+				@media (max-width: $screen-md-max){
+					margin-top: 20px;
+				}
+			}
+			ul{		
+				padding-bottom: 0;
+				@media screen and (max-width: 1200px){
+					padding-left: 60px;
+					padding-top: 50px;
+				}
+				@media (max-width: $screen-md-max){
+					padding-top: 10px;
+				}
+				@media (max-width: $screen-xs-max){
+					padding: 0;
+				}
+				li{
+					// @media (max-width: $screen-xs-max){
+					// 	font-size: 17px;
+					// }
+					&:nth-child(1){
+						margin: 0;
+						padding: 0;
+						padding-bottom: 30px;
+						@media screen and (max-width: 1200px){
+							margin: 0;						
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+							padding-bottom: 10px;
+						}
+					}
+					&:nth-child(2){
+						margin: 0;
+						padding: 0;
+						padding-bottom: 30px;
+						@media screen and (max-width: 1200px){
+							margin: 0;
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+							padding-bottom: 10px;
+						}
+					}
+					&:nth-child(3){
+						margin: 0;
+						padding: 0;
+						@media screen and (max-width: 1200px){
+							margin: 0;		
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+						}
+					}	
+					&:nth-child(4){
+						margin: 0;
+						padding: 0;
+						@media screen and (max-width: 1200px){
+							margin: 0;			
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+						}
+					}
+					&:last-child{
+						margin: 0;
+						padding: 0;
+						@media screen and (max-width: 1200px){
+							margin: 0;			
+						}
+						@media (max-width: $screen-md-max){
+							margin: 0;
+						}
+					}
+				}
+			}
+		}
+		
+		.owl-nav{
+			.owl-prev{
+				color: #fff;
+				font-size: 50px;
+				position: absolute;
+				left: 45px;
+				top: 50%;
+				&:hover{
+					opacity: .6;
+				}
+				@media (max-width: $screen-xs-max){
+					display: none;
+				}
+			}
+			.owl-next{
+				color: #fff;
+				font-size: 50px;
+				position: absolute;
+				right: 45px;
+				top: 50%;
+				&:hover{
+					opacity: .6;
+				}
+				@media (max-width: $screen-xs-max){
+					display: none;
+				}
+			}
+		}
 		.owl-dots {
 			position: absolute;
 			bottom: 25px;
@@ -299,6 +551,10 @@
 		padding-top: 70px;
 		@media (max-width: $screen-sm-max){
 			max-width: 300px;
+			margin: 0 auto;
+		}
+		img{
+			max-width: 100%;
 		}
 	}
 	&__navtrigger {
