--- a/app/styles/_helpers.scss
+++ b/app/styles/_helpers.scss
@@ -92,6 +92,14 @@ body{
 	h2{
 		margin: 0;
 		padding-bottom: 20px;
+		a{
+			text-decoration: none;
+			color: #000;
+			transition: all .5s;
+			&:hover{
+				color: #6f6f6f;
+			}
+		}
 	}
 	ul{
 		margin: 0;
@@ -105,6 +113,14 @@ body{
 			margin-left: 25px;
 			@media (max-width: $screen-xs-max){
 				font-size: 16px;
+			}
+			a{
+				text-decoration: none;
+				color: #000;
+				transition: all .5s;
+				&:hover{
+					color: #6f6f6f;
+				}
 			}
 			i{
 				margin-right: 10px;
@@ -126,26 +142,27 @@ body{
 	}
 }
 .login{
+	padding-bottom: 30px;
 	::-webkit-input-placeholder {
 		color:#6f6f6f;
-		font-size: 20px;
+		font-size: 18px;
 	}
 	::-moz-placeholder {
 		color:#6f6f6f;
-		font-size: 20px;
+		font-size: 18px;
 	}
 	:-moz-placeholder {
 		color:#6f6f6f;
-		font-size: 20px;
+		font-size: 18px;
 	}
 	:-ms-input-placeholder {
 		color:#6f6f6f;
-		font-size: 20px;
+		font-size: 18px;
 	}
 	.input{
 		position: relative;
 		width: 100%;
-		margin: 15px auto;
+		margin: 10px auto;
 		.fa-mobile{
 			font-size: 35px;
 		}
@@ -158,9 +175,10 @@ body{
 			font-size: 23px;
 		}
 
-		input{
+		input, 
+		textarea{
 			width: 100%;
-			padding: 10px 5px 10px 42px;
+			padding: 7px 5px 10px 42px;
 			display: block;
 			border: none;
 			border-bottom: 1px solid #6f6f6f;
@@ -186,10 +204,10 @@ body{
 		position: relative;
 		max-width: 230px;
 		width: 100%;
-		height: 42px;
-		top: 0;
+		min-height: 42px;
 		font-size: 24px;
 		color: #092033;
+		margin-top: 20px;
 		box-shadow: 0px 0px 0px rgba( 15, 165, 60, 0.1 );
 
 		-webkit-transform: translateZ(0);
@@ -272,7 +290,6 @@ body{
 	top: 0;
 	color: #092033;
 	box-shadow: 0px 0px 0px rgba( 15, 165, 60, 0.1 );
-	margin: 0 auto;
 	-webkit-transform: translateZ(0);
 	-moz-transform: translateZ(0);
 	-ms-transform: translateZ(0);
