--- a/app/styles/_dev.scss
+++ b/app/styles/_dev.scss
@@ -1,4 +1,6 @@
 .dev{
+	padding-top: 30px;
+	padding-bottom: 30px;
 	&__application{
 		padding: 25px 0;
 	}
@@ -6,6 +8,92 @@
 		width: 800px;		
 	}
 	&__cycle{
-		min-height: 530px;
+		min-height: 540px;
+		padding-top: 20px;
+		margin-bottom: 20px;
+		background-image: url('../images/dev_bg.png');
+		background-position: 0 130px;
+		background-repeat: no-repeat;
+		position: relative;		
+	}
+	&__etaps{
+		span{
+			font-size: 11px;
+			text-transform: uppercase;
+			&:nth-child(1){
+				position: absolute;
+				bottom: 16px;
+			}
+			&:nth-child(2){
+				position: absolute;
+				bottom: 0;
+				left: 500px;
+			}
+			&:nth-child(3){
+				position: absolute;
+				left: 850px;
+				bottom: 16px;
+			}
+			&:nth-child(4){
+				position: absolute;
+				right: 0;
+				margin-top: 20px;
+				text-align: right;
+			}
+		}
+	}
+	&__step{
+		padding-bottom: 25px;
+		min-height: 380px;	
+		p{
+			font-size: 20px;
+			margin: 0;
+			line-height: 24px;
+		}
+		&--bg-arrow{
+			background-image: url('../images/dev_bg-arrow.png');
+			background-repeat: no-repeat;
+			background-position: 180px 105px;
+		}
+	}
+	&__wrap{
+		min-height: 240px;
+		i{
+			font-size: 100px;
+			color: #092033;
+		}
+		h2{
+			margin: 0;
+			font-size: 25px;
+		}
+	}
+	&__desc{
+		border-top: 1px solid #c0c1c4;
+		padding: 30px 0;
+		p{
+			font-size: 20px;
+			line-height: 26px;
+			margin: 0;
+			padding-bottom: 13px;
+		}
+	}
+	&__create{
+		border-top: 1px solid #c0c1c4;
+		padding: 20px 0;
+		h2{
+			margin: 0;
+			font-size: 30px;
+			font-weight: 600;
+			color: #000;
+		}
+	}
+	&__img-wrap{
+		width: 100%;
+		max-width: 100%;
+		img{
+			width: 100%;
+			max-width: 100%;
+			min-height: 265px;
+		}
 	}
 }
