--- a/app/styles/_dev.scss
+++ b/app/styles/_dev.scss
@@ -1,12 +1,12 @@
 .dev{
 	padding-top: 30px;
-	padding-bottom: 30px;
+	padding-bottom: 10px;
 	&__application{
 		padding: 25px 0;
 	}
-	.services__block{
-		width: 800px;		
-	}
+	// .services__block{
+		// max-width: 800px;		
+	// }
 	&__cycle{
 		min-height: 540px;
 		padding-top: 20px;
@@ -15,49 +15,94 @@
 		background-position: 0 130px;
 		background-repeat: no-repeat;
 		position: relative;		
+		@media screen and (max-width: 1199px){
+			background-size: contain;
+			background-position: 0 173px;
+		}
+		@media (max-width: $screen-sm-max){
+			background-image: none;
+		}
 	}
 	&__etaps{
 		span{
 			font-size: 11px;
 			text-transform: uppercase;
+			@media (max-width: $screen-sm-max){
+				display: none;
+			}
 			&:nth-child(1){
 				position: absolute;
 				bottom: 16px;
+				@media screen and (max-width: 1199px){
+					bottom: 15px;
+				}
 			}
 			&:nth-child(2){
 				position: absolute;
 				bottom: 0;
 				left: 500px;
+				@media screen and (max-width: 1199px){
+					left: 325px;
+				}
 			}
 			&:nth-child(3){
 				position: absolute;
 				left: 850px;
 				bottom: 16px;
+				@media screen and (max-width: 1199px){
+					bottom: 15px;
+					left: 645px;
+				}
 			}
 			&:nth-child(4){
 				position: absolute;
 				right: 0;
 				margin-top: 20px;
 				text-align: right;
+				@media screen and (max-width: 1199px){
+					margin-top: 10px;
+				}
 			}
 		}
 	}
 	&__step{
 		padding-bottom: 25px;
 		min-height: 380px;	
+		@media (max-width: $screen-sm-max){
+			text-align: center;
+			min-height: 170px;
+		}
+		@media (max-width: $screen-xs-max){
+			height: auto;
+		}
 		p{
 			font-size: 20px;
 			margin: 0;
 			line-height: 24px;
+			@media (max-width: $screen-xs-max){
+				font-size: 16px;
+			}
 		}
 		&--bg-arrow{
 			background-image: url('../images/dev_bg-arrow.png');
 			background-repeat: no-repeat;
-			background-position: 180px 105px;
+			background-position: 180px 100px;
+			@media (max-width: $screen-sm-max){
+				background-image: none;
+			}
+			@media (max-width: $screen-xs-max){
+				padding-bottom: 0;
+			}
 		}
 	}
 	&__wrap{
 		min-height: 240px;
+		@media screen and (max-width: 1199px){
+			min-height: 220px;
+		}
+		@media (max-width: $screen-sm-max){
+			min-height: 200px;
+		}
 		i{
 			font-size: 100px;
 			color: #092033;
@@ -65,35 +110,153 @@
 		h2{
 			margin: 0;
 			font-size: 25px;
+			@media screen and (max-width: 1199px){
+				font-size: 22px;
+			}
 		}
 	}
 	&__desc{
 		border-top: 1px solid #c0c1c4;
-		padding: 30px 0;
+		padding: 30px 0;		
+		@media (max-width: $screen-xs-max){
+			padding: 20px 0;		
+		}
 		p{
 			font-size: 20px;
 			line-height: 26px;
 			margin: 0;
 			padding-bottom: 13px;
 		}
+
 	}
 	&__create{
 		border-top: 1px solid #c0c1c4;
-		padding: 20px 0;
+		padding: 20px 0 30px;
+		@media (max-width: $screen-xs-max){
+			padding: 20px 0 0;
+		}
 		h2{
 			margin: 0;
 			font-size: 30px;
 			font-weight: 600;
 			color: #000;
+			padding-top: 10px;	
+			padding-bottom: 30px;
+			@media (max-width: $screen-xs-max){
+				font-size: 20px;
+				text-align: center;
+				padding-top: 0;
+			}
 		}
 	}
 	&__img-wrap{
+		max-width: 500px;
 		width: 100%;
-		max-width: 100%;
+		margin: 0 auto;
 		img{
 			width: 100%;
 			max-width: 100%;
-			min-height: 265px;
+		}
+	}
+	&__create-desc{
+		padding: 15px 20px;
+		width: 100%;
+		max-width: 100%;
+		text-align: center;
+		min-height: 320px;
+		background-color: #eff1f5;
+		@media screen and (max-width: 1199px){
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+		@media (max-width: $screen-sm-max){
+			min-height: 0;
+			text-align: left;
+			min-height: 0;
+			margin-top: 20px;
+		}
+		@media (max-width: $screen-xs-max){
+			margin-bottom: 20px;
+			min-height: 200px;
+			text-align: center;
+			min-height: 0;
+		}
+		h2{
+			font-size: 24px;
+			color: #000;
+			font-weight: normal;
+			padding-bottom: 25px;
+			@media screen and (max-width: 1199px){
+				font-size: 20px;
+				padding-bottom: 20px;
+			}
+			@media (max-width: $screen-sm-max){
+				padding-top: 0;
+				padding-bottom: 10px;
+				br{
+					display: none;
+				}
+			}
+			@media (max-width: $screen-xs-max){
+				font-size: 20px;
+				padding-bottom: 10px;
+				padding-top: 0;
+			}
+		}
+		p{
+			margin: 0;
+			font-size: 18px;
+			color: #000;
+			line-height: 25px;
+			@media screen and (max-width: 1199px){
+				font-size: 16px;
+			}
+			@media (max-width: $screen-xs-max){
+				font-size: 16px;
+			}
+		}
+		&--bottom{
+			padding: 0;
+			width: 100%;
+			max-width: 100%;
+			text-align: center;
+			min-height: 0;
+			background-color: transparent;
+			text-align: left;
+			ul{
+				margin: 0;
+				padding: 0;
+				padding-top: 20px;
+				li{
+					list-style-type: none;
+					position: relative;
+					font-size: 18px;
+					color: #000;
+					padding-left: 30px;
+					padding-bottom: 7px;
+					&:before{
+						position: absolute;
+						content: "\f00c";
+						font-family: "FontAwesome";
+						left: 0;
+						font-size: 18px;
+					}
+				}
+			}
+		}
+		&--create-desc{
+			h2{
+				font-size: 50px;
+			}
+		}
+	}
+	.about__bottom{
+		border-bottom: 1px solid #c0c1c4;
+	}
+	.connection__form-block{
+		padding-top: 20px;
+		button{
+			max-width: 295px;
 		}
 	}
 }
