--- a/app/styles/_etaps.scss
+++ b/app/styles/_etaps.scss
@@ -39,7 +39,7 @@
 		}
 		&:before{
 			position: absolute;
-			content: '';
+			content: '';
 			font-family: 'font';
 			font-size: 25px;
 			color: #b6b6b6;
@@ -50,7 +50,7 @@
 		}
 		&:after{
 			position: absolute;
-			content: '';
+			content: '';
 			font-family: 'font';
 			font-size: 25px;
 			color: #b6b6b6;
