--- a/app/styles/_service.scss
+++ b/app/styles/_service.scss
@@ -7,11 +7,17 @@
 		padding: 0 0 35px 0;
 		border-bottom: 1px solid #c0c1c4;
 		min-height: 175px;
+		@media screen and (max-width: 1200px){
+			min-height: 0;
+		}
 		@media (max-width: $screen-md-max){
 			padding: 0 0 25px 0;			
 		}		
 		@media (max-width: $screen-sm-max){
 			min-height: 100px;
+		}
+		@media (max-width: $screen-xs-max){
+			padding: 0 0 10px 0;
 		}
 		p{
 			font-size: 25px;
@@ -50,6 +56,15 @@
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
+		@media screen and (max-width: 1200px){
+			min-height: 100px;
+		}
+		@media screen and (max-width: 1199px){
+			min-height: 140px;
+		}
+		@media (max-width: $screen-sm-max){
+			min-height: 60px;
+		}
 	}
 	&__links{
 		padding: 15px 50px;
@@ -73,16 +88,25 @@
 				font-size: 20px;
 				margin-top: 15px;
 				text-decoration: none;
+				@media screen and (max-width: 1199px){
+					max-width: 100%;
+				}
 			}
 			.services__img-desc{
 				padding-left: 25px;
 				p{
 					font-size: 20px;
 					line-height: 22px;
+					@media (max-width: $screen-sm-max){
+						margin-top: 10px;
+					}
 				}
 				h2{
 					font-size: 20px;
 					font-weight: 500;
+					@media (max-width: $screen-sm-max){
+						margin-top: 10px;
+					}
 					span{
 						font-size: 25px;
 						font-weight: 600;
